--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-    <title>Ram & Antara getting hitched!</title>
+    <title>Simon & Amanda getting hitched!</title>
     <meta name="description" content="We would like to invite you to our big day.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="theme-color" content="#ffffff">
-    <meta property="og:title" content="Ram & Antara getting hitched">
+    <meta property="og:title" content="Simon & Amanda getting hitched">
     <meta property="og:description" content="We would like to invite you to our big day.">
     <meta property="og:image" content="https://wedding.ramswaroop.me/img/hero-min.jpg">
     <meta property="og:type" content="website">
@@ -75,7 +75,7 @@
                         <ul class="primary-nav">
                             <li><a href="#intro">How we met</a></li>
                             <li><a href="#events">Events</a></li>
-                            <li><a href="#instagram">Instagram</a></li>
+                            <li><a href="#instagram">instagram</a></li>
                             <li><a href="#eng-pics">Engagement</a></li>
                             <li class="hidden-sm hidden-xs"><a href="#video-bg">Glimpse of the city</a></li>
                         </ul>
@@ -95,9 +95,9 @@
         <div class="row">
             <div class="col-md-10 col-md-offset-1">
                 <div class="hero-content text-center">
-                    <!--<h1>Ram and Antara</h1>-->
+                    <!--<h1>Simon and Amanda</h1>-->
                     <img src="img/logo-lg.png">
-                    <!--<p class="intro">Ram & Antara are getting hitched!</p>-->
+                    <!--<p class="intro">Simon & Amanda are getting hitched!</p>-->
                     <!--<a href="#" class="btn btn-fill btn-large btn-margin-right">Scroll Down</a> -->
                 </div>
             </div>
@@ -117,7 +117,7 @@
         <div class="row">
             <div class="col-md-12 text-center">
                 <h3>We are getting hitched</h3>
-                <p>The dates are 27<sup>th</sup> & 28<sup>th</sup> of November '17 and we would like you to be a part of
+                <p>We are getting married on 27<sup>th</sup> of September 2025 and we would like you to be a part of
                     it.</p>
                 <div class="share-bar"></div>
             </div>
@@ -136,9 +136,9 @@
             <div class="col-md-3 hidden-sm hidden-xs"><img src="img/IMG_2317.jpg" class="wp1"></div>
             <div class="col-md-6">
                 <p>
-                    I first saw Antara in the Fall of 2008 when we started our undergrad. I was instantly attracted to
+                    I first saw Amanda in the Fall of 2008 when we started our undergrad. I was instantly attracted to
                     her but was far too nervous to speak to her. I had told my friend I liked her and news had traveled
-                    fast and she soon found out. Her first reaction was "Who is Ram?" and she began searching for me in
+                    fast and she soon found out. Her first reaction was "Who is Simon?" and she began searching for me in
                     the class. She started to take notice of me and no matter how boring the lecture was, we never
                     missed a class after that. After a good few months I finally plucked up the courage to ask her out
                     and the rest is history :)
@@ -264,7 +264,7 @@
             <div class="col-md-12 text-center">
                 <h3>A picture is worth a thousand words!</h3>
                 <p>Help us capture the moment, tag your photos with the hashtag
-                    <a href="https://instagram.com/explore/tags/ramandantara/" target="_blank">#RamAndAntara</a>
+                    <a href="https://instagram.com/explore/tags/SimonandAmanda/" target="_blank">#SimonAndAmanda</a>
                 </p>
             </div>
         </div>
@@ -285,62 +285,62 @@
         </div>
         <div class="row">
             <div class="col-md-2">
-                <a class="fancybox" rel="group" href="img/eng_pics/_RFX2942-lg.jpg">
+                <a class="fancybox" rel="group" href="img/eng_pics/eng_pic_1.jpg">
                     <div class="img-wrap">
                         <div class="overlay">
                             <i class="fa fa-search"></i>
                         </div>
-                        <img src="img/eng_pics/_RFX2942-sm.jpg" alt=""/>
+                        <img src="img/eng_pics/eng_pic_1.jpg" alt=""/>
                     </div>
                 </a>
             </div>
             <div class="col-md-2">
-                <a class="fancybox" rel="group" href="img/eng_pics/IMG_3483-lg.jpg">
+                <a class="fancybox" rel="group" href="img/eng_pics/eng_pic_2.jpg">
                     <div class="img-wrap">
                         <div class="overlay">
                             <i class="fa fa-search"></i>
                         </div>
-                        <img src="img/eng_pics/IMG_3483-sm.jpg" alt=""/>
+                        <img src="img/eng_pics/eng_pic_2.jpg" alt=""/>
                     </div>
                 </a>
             </div>
             <div class="col-md-2">
-                <a class="fancybox" rel="group" href="img/eng_pics/_RFX2992-lg.jpg">
+                <a class="fancybox" rel="group" href="img/eng_pics/eng_pic_3.jpg">
                     <div class="img-wrap">
                         <div class="overlay">
                             <i class="fa fa-search"></i>
                         </div>
-                        <img src="img/eng_pics/_RFX2992-sm.jpg" alt=""/>
+                        <img src="img/eng_pics/eng_pic_3.jpg" alt=""/>
                     </div>
                 </a>
             </div>
             <div class="col-md-2">
-                <a class="fancybox" rel="group" href="img/eng_pics/_RFX3064-lg.jpg">
+                <a class="fancybox" rel="group" href="img/eng_pics/eng_pic_4.jpg">
                     <div class="img-wrap">
                         <div class="overlay">
                             <i class="fa fa-search"></i>
                         </div>
-                        <img src="img/eng_pics/_RFX3064-sm.jpg" alt=""/>
+                        <img src="img/eng_pics/eng_pic_4.jpg" alt=""/>
                     </div>
                 </a>
             </div>
             <div class="col-md-2">
-                <a class="fancybox" rel="group" href="img/eng_pics/NGP_4089-lg.jpg">
+                <a class="fancybox" rel="group" href="img/eng_pics/eng_pic_5.jpg">
                     <div class="img-wrap">
                         <div class="overlay">
                             <i class="fa fa-search"></i>
                         </div>
-                        <img src="img/eng_pics/NGP_4089-sm.jpg" alt=""/>
+                        <img src="img/eng_pics/eng_pic_5.jpg" alt=""/>
                     </div>
                 </a>
             </div>
             <div class="col-md-2">
-                <a class="fancybox" rel="group" href="img/eng_pics/NGP_4119-lg.jpg">
+                <a class="fancybox" rel="group" href="img/eng_pics/eng_pic_6.jpg">
                     <div class="img-wrap">
                         <div class="overlay">
                             <i class="fa fa-search"></i>
                         </div>
-                        <img src="img/eng_pics/NGP_4119-sm.jpg" alt=""/>
+                        <img src="img/eng_pics/eng_pic_6.jpg" alt=""/>
                     </div>
                 </a>
             </div>
@@ -366,8 +366,8 @@
          data-property="{videoURL:'https://youtu.be/9giqL1H6yRs',containment:'#video-bg',autoPlay:true, mute:true, showControls:false, startAt:80, stopAt:259, opacity:1}">
     </div>
     <div id="video-content">
-        <h5>Kolkata</h5>
-        <p>City of joy</p>
+        <h5>Conrad Singapore Marina Bay</h5>
+        <p>Grand Ballroom</p>
     </div>
 </section>
 
@@ -492,7 +492,7 @@
         <div class="row">
             <div class="col-sm-12 text-center content">
                 <span class="to-top-wrapper"><a href="#top" class="to-top"><i class="fa fa-angle-up"></i></a></span>
-                <p>Crafted by Ram with lots of <span class="fa fa-heart pulse2"></span> for Antara</p>
+                <p>Crafted by Simon with lots of <span class="fa fa-heart pulse2"></span> for Amanda</p>
             </div>
         </div>
     </div>
