--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                             <li><a href="#events">Events</a></li>
                             <li><a href="#instagram">instagram</a></li>
                             <li><a href="#eng-pics">Engagement</a></li>
-                            <li class="hidden-sm hidden-xs"><a href="#video-bg">Glimpse of the city</a></li>
+                            <li class="hidden-sm hidden-xs"><a href="#video-bg">Glimpse of the venue</a></li>
                         </ul>
                         <ul class="member-actions">
                             <li><a href="#map" class="login">Venue</a></li>
@@ -136,12 +136,11 @@
             <div class="col-md-3 hidden-sm hidden-xs"><img src="img/IMG_2317.jpg" class="wp1"></div>
             <div class="col-md-6">
                 <p>
-                    I first saw Amanda in the Fall of 2008 when we started our undergrad. I was instantly attracted to
-                    her but was far too nervous to speak to her. I had told my friend I liked her and news had traveled
-                    fast and she soon found out. Her first reaction was "Who is Simon?" and she began searching for me in
-                    the class. She started to take notice of me and no matter how boring the lecture was, we never
-                    missed a class after that. After a good few months I finally plucked up the courage to ask her out
-                    and the rest is history :)
+                    [PLACEHOLDER - from our insta post directly hahaha] Throwback to the surprise engagement -
+                     she said yes to a lifetime of sunsets... in the pouring rain 💍 
+                     Had the whole island to ourselves, but the storm joined the party 🌧️ Told her then: “No matter how 
+                    stormy life gets, I’ll always love you the same”. Back to our secret island on Valentines day 
+                    💙 with better weather this time! 🌅
                 </p>
             </div>
             <div class="col-md-3 hidden-sm hidden-xs"><img src="img/DSD_0214.jpg" class="wp2"></div>
@@ -363,7 +362,7 @@
 
 <section id="video-bg" class="hidden-sm hidden-xs">
     <div id="bgndVideo" class="player"
-         data-property="{videoURL:'https://youtu.be/9giqL1H6yRs',containment:'#video-bg',autoPlay:true, mute:true, showControls:false, startAt:80, stopAt:259, opacity:1}">
+         data-property="{videoURL:'https://www.youtube.com/watch?v=hvgPNOfDOGQ',containment:'#video-bg',autoPlay:true, mute:true, showControls:false, startAt:19, stopAt:63, opacity:1}">
     </div>
     <div id="video-content">
         <h5>Conrad Singapore Marina Bay</h5>
@@ -388,8 +387,8 @@
                 <div id="map-content" class="pointer-events-auto">
                     <div class="row">
                         <div class="col-md-6">
-                            <h5>ITC Fortune Park</h5>
-                            <p>Kona Expressway, Howrah, West Bengal 711403, India</p>
+                            <h5>Conrad Singapore Marina Bay</h5>
+                            <p>2 Temasek Blvd, Singapore 038982</p>
                         </div>
                         <div class="col-md-6">
                             <h5>Mr. Amit Roy</h5>
