--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
             <div class="col-md-10 col-md-offset-1">
                 <div class="hero-content text-center">
                     <!--<h1>Simon and Amanda</h1>-->
+                    <div style="margin-top: 450px;"></div>
                     <img src="img/logo-lg.png">
                     <!--<p class="intro">Simon & Amanda are getting hitched!</p>-->
                     <!--<a href="#" class="btn btn-fill btn-large btn-margin-right">Scroll Down</a> -->
@@ -385,28 +386,29 @@
                     </div>
                 </div>
                 <div id="map-content" class="pointer-events-auto">
-                    <div class="row">
+                    <div class="row text-center">
                         <div class="col-md-6">
                             <h5>Conrad Singapore Marina Bay</h5>
-                            <p>2 Temasek Blvd, Singapore 038982</p>
+                            <p>Two Temasek Boulevard, Singapore 038982</p>
                         </div>
-                        <div class="col-md-6">
-                            <h5>Mr. Amit Roy</h5>
-                            <p><i class="fa fa-mobile"></i> <a href="tel://+919412345678">+91 9412345678</a><br>
-                                <i class="fa fa-mobile"></i> <a href="tel://+917123456789">+91 7123456789</a></p>
+                        <div class="col-md-6" style="padding: 10px;">
+                            <a class="btn btn-fill btn-small" href="https://maps.app.goo.gl/r7n8GBaCo15ffMSf8" target="_blank"><i
+                                    class="fa fa-location-arrow"></i>&nbsp;&nbsp;Directions</a>
                         </div>
+                        <div class="col-md-6" style="padding: 10px;">
+                            <a class="btn btn-accent btn-small" id="btn-show-map"><i class="fa fa-map-marker"></i>&nbsp;&nbsp;Show Map </a>
                     </div>
+                    <!--
                     <div class="row text-center">
                         <div class="col-md-6" style="padding: 5px;">
-                            <a class="btn btn-fill btn-small"
-                               href="https://m.uber.com/ul/?action=setPickup&client_id=Yh7Dl6SjB56RY2JuuZF8ttVa6ryFV78W&pickup=my_location&dropoff[formatted_address]=Fortune%20Park%20Panchwati%20-%20Hotels%20in%20Kolkata%2C%20Howrah%2C%20West%20Bengal%2C%20India&dropoff[latitude]=22.593276&dropoff[longitude]=88.270277"><i
-                                    class="fa fa-taxi"></i>&nbsp;&nbsp;Book Uber</a>
+                            <a class="btn btn-fill btn-small" href="https://maps.app.goo.gl/r7n8GBaCo15ffMSf8" target="_blank"><i
+                                    class="fa fa-location-arrow"></i>&nbsp;&nbsp;Directions</a>
                         </div>
                         <div class="col-md-6" style="padding: 5px;">
-                            <a class="btn btn-accent btn-small" id="btn-show-map"><i class="fa fa-map-marker"></i>&nbsp;&nbsp;Show
-                                map</a>
+                            <a class="btn btn-accent btn-small" id="btn-show-map"><i class="fa fa-map-marker"></i>&nbsp;&nbsp;Show Map</a>
                         </div>
                     </div>
+                    -->
                 </div>
             </div>
         </div>
@@ -505,7 +507,7 @@
 <script src="js/vendor/ouical.js"></script>
 <script src="js/scripts.min.js"></script>
 <script async defer
-        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBlPw3GQYI3faa_9mRE6plWuM7xNEmrwH0&callback=initMap"></script>
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCZ-gH92kcZK374pTaVbV7jqsPF43HPeFE&callback=initMap"></script>
 <!-- Google Analytics -->
 <script>
     (function (i, s, o, g, r, a, m) {
