added images, changed banner pic

--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12 text-center">
-                <h3 class="header">Pre-Wedding Gallery</h3>
+                <h3 class="header">Over The Years</h3>
             </div>
 
     <!-- Fade mask wrapper -->
