--- a/index.html
+++ b/index.html
@@ -111,6 +111,12 @@
         <div class="row text-center countdown-row">
             <div class="col-md-12">
                 <h3 id="wedding-date">Saturday, September 27, 2025</h3>
+                <div class="event-details">
+  <h4 class="venue-name">Dinner Banquet</h4>
+  <p class="venue-location">Conrad Singapore Marina Bay</p>
+  <p class="event-time"><i class="fa fa-clock-o"></i>&nbsp;07:00pm – 11:00pm</p>
+</div>
+
                 <div id="countdown" class="countdown-timer">
                     <span id="days">--</span> Days
                     <span id="hours">--</span> Hrs
