--- a/index.html
+++ b/index.html
@@ -401,7 +401,24 @@
 <section class="rsvp text-center" id="rsvp">
   <div class="container">
     <div class="row rsvp-flex-wrap">
-      
+
+    <div id="rsvp-modal" class="modal fade" tabindex="-1" role="dialog">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-body">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span>&times;</span>
+                    </button>
+                    <div class="section-padding">
+                        <h3>Thank you!</h3>
+                        <p>We are glad to see you join us on our big day.</p>
+                        <div id="add-to-cal"></div>
+                    </div>
+                </div>
+            </div><!-- /.modal-content -->
+        </div><!-- /.modal-dialog -->
+    </div><!-- /.modal -->
+
+
       <!-- RSVP Form -->
       <div class="rsvp-form-col col-md-6 text-left">
         <h3>What are you waiting for?</h3>
@@ -426,7 +443,7 @@
             <div class="col-md-6 col-12">
               <div class="form-input-group">
                 <i class="fa fa-phone"></i>
-                <input type="tel" name="contact" placeholder="Contact number" pattern="[689]\d{7}" maxlength="8" required>
+                <input type="tel" id="contact" name="contact" placeholder="Contact number" pattern="[689]\d{7}" maxlength="8" required>
               </div>
             </div>
 
