--- a/index.html
+++ b/index.html
@@ -260,26 +260,6 @@
                         </div>
                     </a>
                 </div>
-            </div>
-            </div>
-            <button class="carousel-arrow right" aria-label="Next">
-                <svg viewBox="0 0 24 24" width="24" height="24">
-                    <path d="M9 6L15 12L9 18" fill="none" stroke="#444" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                </svg>
-            </button>
-        </section>
-    </div>
-
-    <!-- Fade mask wrapper for second carousel -->
-    <div class="carousel-fade-mask">
-        <section class="carousel-container reverse-carousel">
-            <button class="carousel-arrow left" aria-label="Previous">
-                <svg viewBox="0 0 24 24" width="24" height="24">
-                    <path d="M15 18L9 12L15 6" fill="none" stroke="#444" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                </svg>
-            </button>
-            <div class="carousel-wrapper">
-            <div class="carousel-track">
                 <div class="carousel-item">
                     <a class="fancybox" rel="group" href="img/eng_pics/eng_pic_5.jpg">
                         <div class="image-box">
@@ -307,7 +287,83 @@
                                 <img src="img/eng_pics/eng_pic_8.jpg" alt="Pre-Wedding 8"/>
                         </div>
                     </a>
+                </div>                
+            </div>
+            </div>
+            <button class="carousel-arrow right" aria-label="Next">
+                <svg viewBox="0 0 24 24" width="24" height="24">
+                    <path d="M9 6L15 12L9 18" fill="none" stroke="#444" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                </svg>
+            </button>
+        </section>
+    </div>
+
+    <!-- Fade mask wrapper for second carousel -->
+    <div class="carousel-fade-mask">
+        <section class="carousel-container reverse-carousel">
+            <button class="carousel-arrow left" aria-label="Previous">
+                <svg viewBox="0 0 24 24" width="24" height="24">
+                    <path d="M15 18L9 12L15 6" fill="none" stroke="#444" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                </svg>
+            </button>
+            <div class="carousel-wrapper">
+            <div class="carousel-track">
+                <div class="carousel-item">
+                    <a class="fancybox" rel="group" href="img/eng_pics/eng_pic_9.jpg">
+                        <div class="image-box">
+                                <img src="img/eng_pics/eng_pic_9.jpg" alt="Pre-Wedding 9"/>
+                        </div>
+                    </a>
                 </div>
+                <div class="carousel-item">
+                    <a class="fancybox" rel="group" href="img/eng_pics/eng_pic_10.jpg">
+                        <div class="image-box">
+                                <img src="img/eng_pics/eng_pic_10.jpg" alt="Pre-Wedding 10"/>
+                        </div>
+                    </a>
+                </div>
+                <div class="carousel-item">
+                    <a class="fancybox" rel="group" href="img/eng_pics/eng_pic_11.jpg">
+                        <div class="image-box">
+                                <img src="img/eng_pics/eng_pic_11.jpg" alt="Pre-Wedding 11"/>
+                        </div>
+                    </a>
+                </div>
+                <div class="carousel-item">
+                    <a class="fancybox" rel="group" href="img/eng_pics/eng_pic_12.jpg">
+                        <div class="image-box">
+                                <img src="img/eng_pics/eng_pic_12.jpg" alt="Pre-Wedding 12"/>
+                        </div>
+                    </a>
+                </div>
+                <div class="carousel-item">
+                    <a class="fancybox" rel="group" href="img/eng_pics/eng_pic_13.jpg">
+                        <div class="image-box">
+                                <img src="img/eng_pics/eng_pic_13.jpg" alt="Pre-Wedding 13"/>
+                        </div>
+                    </a>
+                </div>
+                <div class="carousel-item">
+                    <a class="fancybox" rel="group" href="img/eng_pics/eng_pic_14.jpg">
+                        <div class="image-box">
+                                <img src="img/eng_pics/eng_pic_14.jpg" alt="Pre-Wedding 14"/>
+                        </div>
+                    </a>
+                </div>
+                <div class="carousel-item">
+                    <a class="fancybox" rel="group" href="img/eng_pics/eng_pic_15.jpg">
+                        <div class="image-box">
+                                <img src="img/eng_pics/eng_pic_15.jpg" alt="Pre-Wedding 15"/>
+                        </div>
+                    </a>
+                </div>
+                <div class="carousel-item">
+                    <a class="fancybox" rel="group" href="img/eng_pics/eng_pic_16.jpg">
+                        <div class="image-box">
+                                <img src="img/eng_pics/eng_pic_16.jpg" alt="Pre-Wedding 16"/>
+                        </div>
+                    </a>
+                </div>                
             </div>
             </div>
             <button class="carousel-arrow right" aria-label="Next">
