--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta name="description" content="We would like to invite you to our big day.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="theme-color" content="#ffffff">
-    <meta property="og:title" content="Simon & Amanda getting hitched">
+    <meta property="og:title" content="Simon & Amanda">
     <meta property="og:description" content="We would like to invite you to our big day.">
     <meta property="og:image" content="https://wedding.ramswaroop.me/img/hero-min.jpg">
     <meta property="og:type" content="website">
@@ -578,8 +578,8 @@
           <div class="faq-answer">Yes, please let us know so we can make arrangements accordingly</div>
         </div>
         <div class="faq-item">
-          <div class="faq-question">Will there be complimentary parking?</div>
-          <div class="faq-answer">Yes, complimentary parking coupons are available</div>
+          <div class="faq-question">I'm planning to drive, where can I park?</div>
+          <div class="faq-answer"><p>You may park at the <a href="https://maps.app.goo.gl/Y62Avcqk8d7aV2gaA" target="_blank" style="text-decoration: underline;">multi-story carpark</a> behind the church.</p></div>
         </div>
       </div>
     </div>
